# alfred-emojipack

./: .gitignore  CLAUDE.md  alfred_emoji_generator.py  analyze_emoji_keys.py  analyze_essential_emoji_keys.py  complete_example.sh  emoji_alfred_generator.py  emojipack_generator.py  justfile  pyproject.toml  quick_test.py  readme.md  run.sh  setup_emoji_packs.sh  simple_test_runner.py  test_emoji_alfred_generator.py  test_runner.py  test_runner.sh  usage-example.sh
