[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emoji-alfred-generator"
version = "1.0.0"
description = "Generate Alfred emoji snippet packs from freely available emoji databases"
authors = [
    {name = "Generated", email = "generated@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "requests>=2.25",
]
keywords = ["alfred", "emoji", "snippets", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",

    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

[project.scripts]
emoji-alfred-generator = "emoji_alfred_generator:main"

[tool.isort]
multi_line_output = 3

[tool.mypy]
modules = "emoji_alfred_generator"
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "autopep8",
    "isort",
    "mypy",
    "types-requests>=2.32.0.20241016",
    "types-click>=7.1.8",
]

[project.urls]
Homepage = "https://github.com/example/emoji-alfred-generator"
Repository = "https://github.com/example/emoji-alfred-generator"
Issues = "https://github.com/example/emoji-alfred-generator/issues"
