[project]
name = "alfred-emojipack"
version = "1.0.0"
description = "Generate Alfred emoji snippet packs"
authors = [
    {name = "David Allouche", email = "david@ddaa.net"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "requests>=2.25",
]
keywords = ["alfred", "emoji", "snippets", "productivity"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

[tool.isort]
multi_line_output = 3
overwrite_in_place = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "autopep8",
    "isort",
    "mypy",
    "pycodestyle",
    "types-requests>=2.32.0.20241016",
    "types-click>=7.1.8",
]

[project.urls]
Homepage = "https://emojipack.ddaa.net/"
Repository = "https://github.com/ddaanet/alfred-emojipack.git"
Issues = "https://github.com/ddaanet/alfred-emojipack/issues"
